EUI-8835 Register Other Org - Organisation page changes

--- a/src/organisation/containers/organisation/organisation.component.html
+++ b/src/organisation/containers/organisation/organisation.component.html
@@ -59,6 +59,12 @@
     </div>
   </dl>
 
+  <!-- Regulatory organisation type -->
+  <!-- <app-regulator-list *ngIf="registrationData.regulators?.length"
+    [regulatorType]="regulatorType.Organisation"
+    [regulators]="registrationData.regulators">
+  </app-regulator-list> -->
+
   <!-- Administration details -->
   <div *ngIf="organisationDetails.superUser">
     <h2 class="govuk-heading-m govuk-!-margin-top-8">Administration details</h2>
