--- a/src/register-org/components/check-your-answers/check-your-answers.component.html
+++ b/src/register-org/components/check-your-answers/check-your-answers.component.html
@@ -231,6 +231,9 @@
           <div class="govuk-body govuk-!-margin-top-6">
             <button class="govuk-button govuk-buton--primary" (click)="onSubmitData()" type="button">Confirm and submit</button>
           </div>
+          <div>
+            <a class="govuk-link" href="javascript:void(0)" (click)="onCancel()">Cancel</a>
+          </div>
         </form>
       </div>
     </div>
