--- a/src/register-org/components/payment-by-account-details/payment-by-account-details.component.html
+++ b/src/register-org/components/payment-by-account-details/payment-by-account-details.component.html
@@ -14,7 +14,7 @@
               <span class="govuk-visually-hidden">Error:</span>{{summaryErrors.items[i].message}}
             </p>
             <div class="govuk-!-margin-bottom-6" [formGroupName]="i">
-              <label class="govuk-label govuk-!-font-weight-bold" for="pba-number">
+              <label class="govuk-label govuk-!-font-weight-bold" for="pba-number-{{i}}">
                 PBA number
               </label>
               <input class="govuk-input govuk-input--width-20" id="pba-number-{{i}}" type="text"
