--- a/src/register-org/components/regulator-details/regulator-details.component.html
+++ b/src/register-org/components/regulator-details/regulator-details.component.html
@@ -32,71 +32,67 @@
                   <div *ngIf="duplicateErrorMessage(i)" class="govuk-error-message">
                     <span class="govuk-visually-hidden">Error:</span> {{regulatoryOrganisationTypeMessage.DUPLICATE_REGULATOR_INLINE}}
                   </div>
-                  <fieldset class="govuk-fieldset">
-                    <legend class="govuk-fieldset__legend govuk-fieldset__legend--s">
-                      <h1 class="govuk-fieldset__heading">
-                        <span *ngIf="regulatorType === regulatorTypeEnum.Individual">
-                          Select the type of regulator
-                        </span>
-                        <span *ngIf="regulatorType === regulatorTypeEnum.Organisation">
-                          Select the type of regulatory organisation
-                        </span>
-                      </h1>
-                    </legend>
-                    <div class="govuk-hint">
-                      For example Solicitor Regulation Authority (SRA) number
-                    </div>
-                    <div *ngIf="fieldHasErrorMessage('regulator-type' + i)" class="govuk-error-message">
-                      <span class="govuk-visually-hidden">Error:</span> {{regulatoryOrganisationTypeMessage.NO_REGULATORY_ORG_SELECTED}}
-                    </div>
-                    <div *ngIf="duplicateErrorMessage(i)" class="govuk-error-message">
-                      <span class="govuk-visually-hidden">Error:</span> {{regulatoryOrganisationTypeMessage.DUPLICATE_REGULATOR}}
-                    </div>
-                    <select class="govuk-select govuk-!-width-two-thirds"
-                      [ngClass]="{'govuk-select--error': fieldHasErrorMessage('regulator-type' + i)}"
-                      [id]="'regulator-type' + i"
-                      name="regulatorType" formControlName="regulatorType"
-                      (change)="onOptionSelected($event.target.value, i)">
-                      <option [ngValue]="SELECT_A_VALUE" disabled>--Select a value--</option>
-                      <option *ngFor="let regulatorType of regulatorTypes$ | async"
-                        [value]="regulatorType.name">
-                        {{regulatorType.name}}
-                      </option>
-                    </select>
-                    <button *ngIf="regulators.controls.length > 1" (click)="onRemoveBtnClicked(i)" [id]="'remove-button' + i"
-                      class="govuk-button govuk-button--secondary govuk-!-margin-left-4 govuk-!-margin-bottom-0">
-                      Remove
-                    </button>
+                  <label class="govuk-!-font-weight-bold govuk-!-font-size-19" [for]="'regulator-type' + i">
+                    <span *ngIf="regulatorType === regulatorTypeEnum.Individual">
+                      Select the type of regulator
+                    </span>
+                    <span *ngIf="regulatorType === regulatorTypeEnum.Organisation">
+                      Select the type of regulatory organisation
+                    </span>
+                  </label>
+                  <div class="govuk-hint">
+                    For example Solicitor Regulation Authority (SRA) number
+                  </div>
+                  <div *ngIf="fieldHasErrorMessage('regulator-type' + i)" class="govuk-error-message">
+                    <span class="govuk-visually-hidden">Error:</span> {{regulatoryOrganisationTypeMessage.NO_REGULATORY_ORG_SELECTED}}
+                  </div>
+                  <div *ngIf="duplicateErrorMessage(i)" class="govuk-error-message">
+                    <span class="govuk-visually-hidden">Error:</span> {{regulatoryOrganisationTypeMessage.DUPLICATE_REGULATOR}}
+                  </div>
+                  <select class="govuk-select govuk-!-width-two-thirds"
+                    [ngClass]="{'govuk-select--error': fieldHasErrorMessage('regulator-type' + i)}"
+                    [id]="'regulator-type' + i"
+                    name="regulatorType" formControlName="regulatorType"
+                    (change)="onOptionSelected($event.target.value, i)">
+                    <option [ngValue]="SELECT_A_VALUE" disabled>--Select a value--</option>
+                    <option *ngFor="let regulatorType of regulatorTypes$ | async"
+                      [value]="regulatorType.name">
+                      {{regulatorType.name}}
+                    </option>
+                  </select>
+                  <button *ngIf="regulators.controls.length > 1" (click)="onRemoveBtnClicked(i)" [id]="'remove-button' + i"
+                    class="govuk-button govuk-button--secondary govuk-!-margin-left-4 govuk-!-margin-bottom-0">
+                    Remove
+                  </button>
 
-                    <div *ngIf="regulators.controls[i].get('regulatorName')" class="govuk-form-group govuk-!-margin-top-4"
-                      [ngClass]="{'govuk-form-group--error': fieldHasErrorMessage('regulator-name' + i)}">
-                      <label class="govuk-label govuk-!-font-weight-bold" for="'regulator-name' + i">
-                        Enter the name of the professional body or regulator
-                      </label>
-                      <div *ngIf="fieldHasErrorMessage('regulator-name' + i)" class="govuk-error-message">
-                        <span class="govuk-visually-hidden">Error:</span> {{regulatoryOrganisationTypeMessage.NO_REGULATOR_NAME}}
-                      </div>
-                      <input class="govuk-input govuk-!-width-two-thirds"
-                        [ngClass]="{'govuk-input--error': fieldHasErrorMessage('regulator-name' + i)}"
-                        type="text" [id]="'regulator-name' + i"
-                        name="regulatorName" formControlName="regulatorName">
+                  <div *ngIf="regulators.controls[i].get('regulatorName')" class="govuk-form-group govuk-!-margin-top-4"
+                    [ngClass]="{'govuk-form-group--error': fieldHasErrorMessage('regulator-name' + i)}">
+                    <label class="govuk-label govuk-!-font-weight-bold" for="'regulator-name' + i">
+                      Enter the name of the professional body or regulator
+                    </label>
+                    <div *ngIf="fieldHasErrorMessage('regulator-name' + i)" class="govuk-error-message">
+                      <span class="govuk-visually-hidden">Error:</span> {{regulatoryOrganisationTypeMessage.NO_REGULATOR_NAME}}
                     </div>
+                    <input class="govuk-input govuk-!-width-two-thirds"
+                      [ngClass]="{'govuk-input--error': fieldHasErrorMessage('regulator-name' + i)}"
+                      type="text" [id]="'regulator-name' + i"
+                      name="regulatorName" formControlName="regulatorName">
+                  </div>
 
-                    <div *ngIf="regulators.controls[i].get('organisationRegistrationNumber')"
-                      class="govuk-form-group govuk-!-margin-top-4 govuk-!-margin-bottom-4"
-                      [ngClass]="{'govuk-form-group--error': fieldHasErrorMessage('organisation-registration-number' + i)}">
-                      <label class="govuk-label govuk-!-font-weight-bold" for="'organisation-registration-number' + i">
-                        Enter your organisation's registration number
-                      </label>
-                      <div *ngIf="fieldHasErrorMessage('organisation-registration-number' + i)" class="govuk-error-message">
-                        <span class="govuk-visually-hidden">Error:</span> {{regulatoryOrganisationTypeMessage.NO_REGISTRATION_NUMBER}}
-                      </div>
-                      <input class="govuk-input govuk-!-width-two-thirds"
-                        [ngClass]="{'govuk-input--error': fieldHasErrorMessage('organisation-registration-number' + i)}"
-                        type="text" [id]="'organisation-registration-number' + i"
-                        name="organisationRegistrationNumber" formControlName="organisationRegistrationNumber">
+                  <div *ngIf="regulators.controls[i].get('organisationRegistrationNumber')"
+                    class="govuk-form-group govuk-!-margin-top-4 govuk-!-margin-bottom-4"
+                    [ngClass]="{'govuk-form-group--error': fieldHasErrorMessage('organisation-registration-number' + i)}">
+                    <label class="govuk-label govuk-!-font-weight-bold" for="'organisation-registration-number' + i">
+                      Enter your organisation's registration number
+                    </label>
+                    <div *ngIf="fieldHasErrorMessage('organisation-registration-number' + i)" class="govuk-error-message">
+                      <span class="govuk-visually-hidden">Error:</span> {{regulatoryOrganisationTypeMessage.NO_REGISTRATION_NUMBER}}
                     </div>
-                  </fieldset>
+                    <input class="govuk-input govuk-!-width-two-thirds"
+                      [ngClass]="{'govuk-input--error': fieldHasErrorMessage('organisation-registration-number' + i)}"
+                      type="text" [id]="'organisation-registration-number' + i"
+                      name="organisationRegistrationNumber" formControlName="organisationRegistrationNumber">
+                  </div>
                 </ng-container>
               </div>
             </ng-container>
