EUI-8841 Register Other Org - Accessibility issues

--- a/src/register-org/components/check-your-answers/check-your-answers.component.html
+++ b/src/register-org/components/check-your-answers/check-your-answers.component.html
@@ -229,7 +229,7 @@
               </label>
           </div>
           <div class="govuk-body govuk-!-margin-top-6">
-            <button class="govuk-button govuk-buton--primary" (click)="onSubmitData()" type="button">Confirm and submit</button>
+            <button class="govuk-button govuk-buton--primary" (click)="onSubmitData()" type="submit">Confirm and submit</button>
           </div>
           <div>
             <a class="govuk-link" href="javascript:void(0)" (click)="onCancel()">Cancel</a>
