--- a/src/register-org/components/organisation-services-access/organisation-services-access.component.html
+++ b/src/register-org/components/organisation-services-access/organisation-services-access.component.html
@@ -34,7 +34,7 @@
                 <div class="govuk-checkboxes__conditional"
                   [ngClass]="{'govuk-checkboxes__conditional--hidden': !showOtherServicesInput}">
                   <div class="govuk-form-group" [ngClass]="{'govuk-form-group--error': otherServicesError}">
-                    <label class="govuk-label" for="contact-by-text">
+                    <label class="govuk-label" for="other-services">
                       Please enter the HMCTS service you are wishing to access
                     </label>
                     <div class="govuk-error-message" *ngIf="otherServicesError">
