Commit all design changes
- Form group changes
- Tobedefined changes
- Error message changes
-Fieldset changes

--- a/src/register-org/components/check-your-answers/check-your-answers.component.html
+++ b/src/register-org/components/check-your-answers/check-your-answers.component.html
@@ -220,7 +220,7 @@
           </div>
           <div class="govuk-checkboxes__item">
               <input class="govuk-checkboxes__input" type="checkbox" id="confirm-terms-and-conditions"
-              name="confirmTermsAndConditions" formControlName="confirmTermsAndConditions" (change)="termsAndConditionsChange($event)">
+              name="confirmTermsAndConditions" formControlName="confirmTermsAndConditions" (change)="termsAndConditionsChange()">
               <label class="govuk-label govuk-checkboxes__label" for="confirm-terms-and-conditions">
                 You have read and understood the
                 <a href="javascript:void(0)" target="_blank"
