--- a/src/register-org/components/document-exchange-reference/document-exchange-reference.component.html
+++ b/src/register-org/components/document-exchange-reference/document-exchange-reference.component.html
@@ -1,23 +1,9 @@
 <main id="content" class="govuk-main-wrapper" role="main" tabindex="-1">
-  <ng-container *ngIf="dxError">
-    <div class="govuk-error-summary govuk-!-margin-top-4" aria-labelledby="error-summary-title" role="alert" tabindex="-1" data-module="govuk-error-summary">
-      <h2 class="govuk-error-summary__title" id="error-summary-title" #errorSummaryTitleElement>
-        There is a problem
-      </h2>
-      <div class="govuk-error-summary__body">
-        <ul class="govuk-list govuk-error-summary__list">
-          <li>
-            <a href="{{registerOrgService.REGISTER_ORG_NEW_ROUTE}}/document-exchange-reference#{{dxError.fieldId}}">
-              {{dxError.description}}
-            </a>
-          </li>
-        </ul>
-      </div>
-    </div>
-  </ng-container>
   <div class="govuk-grid-row">
     <div class="govuk-grid-column-two-thirds">
       <a class="govuk-back-link" href="javascript:void(0)" (click)="onBack()">Back</a>
+      <xuilib-hmcts-error-summary [errorMessages]="dxErrors" [header]="'There is a problem'">
+      </xuilib-hmcts-error-summary>
       <span class="govuk-caption-xl">Register an organisation</span>
       <form [formGroup]="dxFormGroup">
         <div class="govuk-form-group">
@@ -29,22 +15,28 @@
             </legend>
             <hr>
             <div id="document-exchange-hint" class="govuk-hint">
-              Document Exchange (DX) is a service that enables solicitors to move large amounts of paperwork between one another.
+              Document Exchange (DX) is a service that enables solicitors to move large amounts of paperwork between one
+              another.
             </div>
-            <div class="govuk-radios" data-module="govuk-radios">
-              <div class="govuk-radios__item">
-                <input class="govuk-radios__input" type="radio" value="yes"
-                  id="document-exchange-yes" name="documentExchange" formControlName="documentExchange">
-                <label class="govuk-label govuk-radios__label" for="document-exchange-yes">
-                  Yes
-                </label>
-              </div>
-              <div class="govuk-radios__item">
-                <input class="govuk-radios__input" type="radio" value="no"
-                  id="document-exchange-no" name="documentExchange" formControlName="documentExchange">
-                <label class="govuk-label govuk-radios__label" for="document-exchange-no">
-                  No
-                </label>
+            <div [ngClass]="{'govuk-form-group--error': errorPresent}">
+              <p class="govuk-error-message" *ngIf="errorPresent">
+                <span class="govuk-visually-hidden">Error:</span>{{dxErrors[0].message}}
+              </p>
+              <div class="govuk-radios" data-module="govuk-radios">
+                <div class="govuk-radios__item">
+                  <input class="govuk-radios__input" type="radio" value="yes" id="document-exchange-yes"
+                    name="documentExchange" formControlName="documentExchange">
+                  <label class="govuk-label govuk-radios__label" for="document-exchange-yes">
+                    Yes
+                  </label>
+                </div>
+                <div class="govuk-radios__item">
+                  <input class="govuk-radios__input" type="radio" value="no" id="document-exchange-no"
+                    name="documentExchange" formControlName="documentExchange">
+                  <label class="govuk-label govuk-radios__label" for="document-exchange-no">
+                    No
+                  </label>
+                </div>
               </div>
             </div>
           </fieldset>
