--- a/src/register-org/components/payment-by-account/payment-by-account.component.html
+++ b/src/register-org/components/payment-by-account/payment-by-account.component.html
@@ -13,7 +13,7 @@
               </h1>
             </legend>
             <hr>
-            <div id="pba-hint" class="govuk-body govuk-!-margin-top-4">
+            <div id="pba-hint" class="govuk-hint govuk-!-margin-top-4">
               Payment by account (PBA) is a credit service for organisations who frequently bring proceedings to HMCTS.
               It enables monthly invoicing for court fees.
             </div>
