--- a/src/register-org/components/before-you-start/before-you-start.component.html
+++ b/src/register-org/components/before-you-start/before-you-start.component.html
@@ -1,22 +1,7 @@
 <main id="content" class="govuk-main-wrapper govuk-!-margin-top-4" role="main" tabindex="-1" #mainContent>
-  <ng-container *ngIf="beforeYouStartError">
-    <div class="govuk-error-summary govuk-!-margin-top-4" aria-labelledby="error-summary-title" role="alert" tabindex="-1" data-module="govuk-error-summary">
-      <h2 class="govuk-error-summary__title" id="error-summary-title">
-        There is a problem
-      </h2>
-      <div class="govuk-error-summary__body">
-        <ul class="govuk-list govuk-error-summary__list">
-          <li>
-            <a href="{{registerOrgService.REGISTER_ORG_NEW_ROUTE}}/before-you-start#{{beforeYouStartError.fieldId}}">
-              {{beforeYouStartError.description}}
-            </a>
-          </li>
-        </ul>
-      </div>
-    </div>
-  </ng-container>
   <div class="govuk-grid-row">
     <div class="govuk-grid-column-two-thirds">
+      <xuilib-hmcts-error-summary [errorMessages]="beforeYouStartErrors" [header]="'There is a problem'"></xuilib-hmcts-error-summary>
       <h1 class="govuk-heading-xl">
         Apply for an organisation to manage civil, family and tribunal cases
       </h1>
@@ -58,9 +43,9 @@
       </div>
       <div class="govuk-body govuk-!-margin-top-6">
         <form [formGroup]="beforeYouStartForm">
-          <div class="govuk-form-group" [ngClass]="{'govuk-form-group--error': beforeYouStartError}">
-            <p class="govuk-error-message" *ngIf="beforeYouStartError">
-              <span class="govuk-visually-hidden">Error:</span>{{beforeYouStartError.description}}
+          <div class="govuk-form-group" [ngClass]="{'govuk-form-group--error': errorPresent}">
+            <p class="govuk-error-message" *ngIf="errorPresent">
+              <span class="govuk-visually-hidden">Error:</span>{{beforeYouStartErrors[0].message}}
             </p>
             <div class="govuk-checkboxes" data-module="govuk-checkboxes">
               <div class="govuk-checkboxes__item">
