EUI-8927 ROO Pba details page fixes

--- a/src/register-org/components/payment-by-account-details/payment-by-account-details.component.html
+++ b/src/register-org/components/payment-by-account-details/payment-by-account-details.component.html
@@ -15,7 +15,7 @@
             </p>
             <div class="govuk-!-margin-bottom-6" [formGroupName]="i">
               <label class="govuk-label govuk-!-font-weight-bold" for="pba-number-{{i}}">
-                PBA number
+                PBA number (Optional)
               </label>
               <input class="govuk-input govuk-input--width-20" id="pba-number-{{i}}" type="text"
                 name="pbaNumber" formControlName="pbaNumber">
