EUI-8927 ROO Pba details page fixes

--- a/src/register-org/components/payment-by-account-details/payment-by-account-details.component.html
+++ b/src/register-org/components/payment-by-account-details/payment-by-account-details.component.html
@@ -2,9 +2,7 @@
   <div class="govuk-grid-row">
     <div class="govuk-grid-column-two-thirds">
       <a class="govuk-back-link" href="javascript:void(0)" (click)="onBack()">Back</a>
-      <xuilib-hmcts-error-summary *ngIf="summaryErrors"
-        [errorMessages]="validationErrors"
-        [header]="'There is a problem'">
+      <xuilib-hmcts-error-summary [errorMessages]="validationErrors" [header]="'There is a problem'">
       </xuilib-hmcts-error-summary>
       <span class="govuk-caption-xl">Register an organisation</span>
       <h1 class="govuk-heading-xl">
