--- a/src/register-org/components/regulator-details/regulator-details.component.html
+++ b/src/register-org/components/regulator-details/regulator-details.component.html
@@ -26,7 +26,7 @@
             HMCTS needs to gather this information as it is required to gain access to some of our services.
           </p>
           <form [formGroup]="regulatorDetailsFormGroup">
-            <div class="govuk-form-group">
+            <div class="govuk-form-group" [ngClass]="{'govuk-form-group--error': validationErrors.length}">
               <ng-container formArrayName="regulators">
                 <div *ngFor="let _ of regulators.controls; index as i"
                   class="govuk-!-margin-bottom-6"
